--- a/src/WebApi/project.json
+++ b/src/WebApi/project.json
@@ -16,7 +16,8 @@
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
     "DatabaseService": "1.0.0-*",
-    "DomainModel": "1.0.0-*"
+    "DomainModel": "1.0.0-*",
+    "AutoMapper": "5.1.1"
   },
 
   "tools": {
