--- a/src/WebApi/Properties/launchSettings.json
+++ b/src/WebApi/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/categories",
+      "launchUrl": "api/posts",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
