--- a/src/WebApi/bower.json
+++ b/src/WebApi/bower.json
@@ -7,7 +7,8 @@
     "requirejs": "2.3.2",
     "requirejs-text": "2.0.15",
     "boostrap": "3.3.7",
-    "toastr": "2.1.3"
+    "toastr": "2.1.3",
+    "jqcloud2": "2.0.2"
   },
   "resolutions": {
     "jquery": "3.1.1"
