--- a/src/WebApi/bower.json
+++ b/src/WebApi/bower.json
@@ -6,6 +6,9 @@
     "requirejs": "2.3.2",
     "requirejs-text": "2.0.15",
     "jquery": "3.1.1",
-    "bootstrap": "3.3.7"
+    "bootstrap": "3.3.7",
+    "toastr": "2.1.3",
+    "jqcloud2": "2.0.2"
+
   }
 }
